ingress/ingress-test/ingress-nginx-values/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: test 
spec:
  type: NodePort
  selector:
     test: nginx1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
